Fixed scaling on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,6 +53,8 @@ button {
 	overflow: hidden;
 	width: 800px;
 	height: 600px;
+	min-width: 800px;
+	min-height: 600px;	
 
 	#border,
 	section {
